Add cloud deployment support: H2 database, configurable CORS and API URL, demo data seeder